z-index issue  on menus fixed

--- a/components/navigation/Large Navigation 6/_navigation-large.scss
+++ b/components/navigation/Large Navigation 6/_navigation-large.scss
@@ -62,7 +62,7 @@ $animations-duration: 190ms;
 					text-transform: uppercase;
 					text-align: center;
 					position: relative;
-					z-index: 1;
+					z-index: 20;
 
 					/* First Set of Dropdowns Setup */
 					& > .nav-v2-1-dropdown {
